# Tarea-3-ELO329-

./: README.md  readme.TXT
Stage 2/: CMakeLists.txt  cellular.cpp  cellular.h  eloteltag.cpp  eloteltag.h  equipo.cpp  equipo.h  mainwindow.cpp  tablet.cpp  tablet.h  territory.h  territoryView.cpp  territoryView.h
Stage1/: CMakeLists.txt  cellular.h  equipo.h  mainwindow.cpp  mainwindow.h  territory.cpp  territoryView.cpp
Stage3/: cellular.cpp  config.txt  eloteltag.cpp  eloteltag.h  equipo.cpp  equipo.h  etnube.cpp  etnube.h  findmywindow.cpp  findmywindow.h  mainwindow.cpp  tablet.cpp  tablet.h  territoryView.cpp
Stage4/: CMakeLists.txt  cellular.h  eloteltag.cpp  eloteltag.h  etnube.cpp  findmywindow.cpp  findmywindow.h  main.cpp  mainwindow.h  tablet.cpp  tablet.h  territoryView.cpp  territoryView.h
